--- a/index.css
+++ b/index.css
@@ -13,14 +13,17 @@ header {
 
 .buttons {
     margin-top: 10px;
-    border-radius: 10px;
+   
 }
-
 .buttons button {
     margin: 5px;
     padding: 10px 20px;
     font-size: 16px;
-}
+     border-radius: 10px;
+     border: none;
+    transition: .3s;
+     }
+
 
 .container {
     padding: 20px;
@@ -35,17 +38,23 @@ header {
 
 .block img {
     max-width: 100%;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.5);
 }
 
 .block.card {
     background-color: #f9f9f9;
     box-shadow: 0 4px 8px rgba(0,0,0,0.5);
 }
+.buttons button:hover{
+    background-color: #222;
+    color: #fff;
+    background-color: #dddddd3a;
+    cursor: pointer;
+    
+}
+.buttons button:active{
+    transform: scale(.8);
 
-.button1 {
-    background-color: #f0f8ff;
-    color: #000;
-    border: 3px solid #ddd;
 }
 
 .button2 {
