--- a/index.css
+++ b/index.css
@@ -116,12 +116,12 @@ header {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 70px;
   background-color: transparent;
   border: none;
   font-size: 24px;
-  color: #000;
+  color: brown;
 }
 
 .prev-button {
