--- a/index.css
+++ b/index.css
@@ -81,10 +81,19 @@ header {
     padding: 100px 0;
     text-align: center;
 }
+.nam {
+    margin: 0 auto;
+    height: 50px;
+    width: 300px;    
+    box-shadow:4px 4px 8px 8px rgba(0, 0, 0, 0.5);
+
+}
 
 .mualif {
     color: #f0f8ff;
-     text-align: center;
+    display: flex;
+     align-items: center;
+     justify-content: center;
 }
 
 .page-title {
@@ -97,10 +106,10 @@ header {
   height: 400px;
   margin: 0 auto;
   overflow: hidden;
+  box-shadow:4px 4px 8px 8px rgb(240, 240, 240);
 }
 
 .slider {
-    
   display: flex;
   transition: transform 0.5s ease-in-out;
 }
